# vulkan-tuto-c

./: HelloTriangle  Makefile  compile_commands.json  main.c  meson.build  vk_layer_settings.txt
.cache/clangd/index/: aabb2d.h.9FD6D690BE8DCB66.idx  affine-mat.h.0C8EF9FA8D87E400.idx  affine-post.h.D7E5C88FCBC96A5A.idx  affine-pre.h.E593BDF2037B9B15.idx  affine.h.01D0613187C305A7.idx  affine.h.44305DE7F1CF5721.idx  affine2d.h.05A91C97EBB51252.idx  bezier.h.6C6DF3031E04D078.idx  binary.c.A7C77EE891A981D8.idx  binary.h.3A1BCC8D7518F3AB.idx  box.h.A5A5E955CF5F31D5.idx  buffer.c.6B32BD6BD19DD0C5.idx  buffer.h.9CAFEFC65E329586.idx  cam.h.6411558F2474613E.idx  cglm.h.58094F0CC42DFE73.idx  clamp.h.DAABA1A41246125B.idx  color.h.87D132EAD4882EBB.idx  colors.h.FCBAD912A58CDC77.idx  commandbuffer.c.6D306E64DEA6AB31.idx  commandbuffer.h.E88A1C941C40A022.idx  commandpool.c.40C240CD56918FDD.idx  commandpool.h.E8BBC40F80F75BA3.idx  (+82 more)
File/: Makefile  binary.c  binary.h
Math/: clamp.h
Vulkan/: Makefile  buffer.c  buffer.h  commandbuffer.c  commandbuffer.h  commandpool.c  commandpool.h  device.c  device.h  extension.c  extension.h  framebuffer.c  framebuffer.h  graphicspipeline.c  graphicspipeline.h  image.c  imageview.c  imageview.h  instance.c  instance.h  model.c  model.h  objloader.c  queue.c  queue.h  renderpass.c  renderpass.h  shadermodule.c  shadermodule.h  surface.c  surface.h  swapchain.c  swapchain.h  sync.c  sync.h  texture.c  texture.h
Vulkan/Error/: Makefile  all  error.c  error.h
include/: colors.h  debug.h
shaders/: Makefile  main.frag  main.vert
